@@ -27,13 +27,13 @@ Result('geo','def fnt','OverUnderIso')
 
 Flow('x',None,'math n1=50 output=x1')
 Flow('y','x','math output=x1^2')
-Flow('z','x','byte allpos=y')
+Flow('z zbar','x','byte allpos=y bar=${TARGETS[1]}')
 
 Result('xyz','x y z',
        '''
        cmplx ${SOURCES[1]} |
        graph depth=${SOURCES[2]} symbol=o symbolsz=8 color=h
-       title="Colored Symbols"
+       title="Colored Symbols" scalebar=y
        ''')
 
 End()
